pkgs/dartcv_core/src/core.h

int Mat_Channels(Mat m);
// CvStatus *Mat_DataPtr(Mat m, uchar **data, int *length);

CvStatus *Mat_AdjustROI(Mat m, int dtop, int dbottom, int dleft, int dright, Mat *rval);
CvStatus *Mat_Clone(Mat m, Mat *rval);
CvStatus *Mat_AddMat(Mat m, Mat val);
CvStatus *Mat_AddUChar(Mat m, uint8_t val);
CvStatus *Mat_AddSChar(Mat m, int8_t val);
CvStatus *Mat_AddI16(Mat m, int16_t val);
CvStatus *Mat_AddU16(Mat m, uint16_t val);
CvStatus *Mat_AddI32(Mat m, int32_t val);
CvStatus *Mat_AddFloat(Mat m, float_t val);
CvStatus *Mat_AddF64(Mat m, double_t val);
CvStatus *
Mat_AddWeighted(Mat src1, double alpha, Mat src2, double beta, double gamma, Mat dst, int dtype);
CvStatus *Mat_BitwiseAnd(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseAndWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_BitwiseNot(Mat src1, Mat dst);
CvStatus *Mat_BitwiseNotWithMask(Mat src1, Mat dst, Mat mask);
CvStatus *Mat_BitwiseOr(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseOrWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_BitwiseXor(Mat src1, Mat src2, Mat dst);
CvStatus *Mat_BitwiseXorWithMask(Mat src1, Mat src2, Mat dst, Mat mask);
CvStatus *Mat_BatchDistance(
    Mat src1,
    Mat src2,
    Mat dist,
    int dtype,
    Mat nidx,
    int normType,
    int K,
    Mat mask,
    int update,
    bool crosscheck
);
CvStatus *Mat_BorderInterpolate(int p, int len, int borderType, int *rval);
CvStatus *Mat_CalcCovarMatrix(Mat samples, Mat covar, Mat mean, int flags, int ctype);
CvStatus *Mat_CartToPolar(Mat x, Mat y, Mat magnitude, Mat angle, bool angleInDegrees);
CvStatus *Mat_CheckRange(Mat m, bool quiet, Point *pos, double minVal, double maxVal, bool *rval);