pkgs/dartcv_core/lib/src/g/core.g.dart


  ffi.Pointer<CvStatus> Mat_AddF64(
    Mat m,
    double val,
  ) {
    return _Mat_AddF64(
      m,
      val,
    );
  }

  late final _Mat_AddF64Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, double_t)>>(
      'Mat_AddF64');
  late final _Mat_AddF64 =
      _Mat_AddF64Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_AddFloat(
    Mat m,
    double val,
  ) {
    return _Mat_AddFloat(
      m,
      val,
    );
  }

  late final _Mat_AddFloatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, float_t)>>(
          'Mat_AddFloat');
  late final _Mat_AddFloat = _Mat_AddFloatPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, double)>();

  ffi.Pointer<CvStatus> Mat_AddI16(
    Mat m,
    int val,
  ) {
    return _Mat_AddI16(
      m,
      val,
    );
  }

  late final _Mat_AddI16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int16)>>(
      'Mat_AddI16');
  late final _Mat_AddI16 =
      _Mat_AddI16Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AddI32(
    Mat m,
    int val,
  ) {
    return _Mat_AddI32(
      m,
      val,
    );
  }

  late final _Mat_AddI32Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int32)>>(
      'Mat_AddI32');
  late final _Mat_AddI32 =
      _Mat_AddI32Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AddMat(
    Mat m,
    Mat val,
  ) {
    return _Mat_AddMat(
      m,
      val,
    );
  }

  late final _Mat_AddMatPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_AddMat');
  late final _Mat_AddMat =
      _Mat_AddMatPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_AddSChar(
    Mat m,
    int val,
  ) {
    return _Mat_AddSChar(
      m,
      val,
    );
  }

  late final _Mat_AddSCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Int8)>>(
      'Mat_AddSChar');
  late final _Mat_AddSChar =
      _Mat_AddSCharPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AddU16(
    Mat m,
    int val,
  ) {
    return _Mat_AddU16(
      m,
      val,
    );
  }

  late final _Mat_AddU16Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint16)>>(
      'Mat_AddU16');
  late final _Mat_AddU16 =
      _Mat_AddU16Ptr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AddUChar(
    Mat m,
    int val,
  ) {
    return _Mat_AddUChar(
      m,
      val,
    );
  }

  late final _Mat_AddUCharPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, ffi.Uint8)>>(
      'Mat_AddUChar');
  late final _Mat_AddUChar =
      _Mat_AddUCharPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AddWeighted(
    Mat src1,
    double alpha,
    Mat src2,
    double beta,
    double gamma,
    Mat dst,
    int dtype,
  ) {
    return _Mat_AddWeighted(
      src1,
      alpha,
      src2,
      beta,
      gamma,
      dst,
      dtype,
    );
  }

  late final _Mat_AddWeightedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Double, Mat, ffi.Double,
              ffi.Double, Mat, ffi.Int)>>('Mat_AddWeighted');
  late final _Mat_AddWeighted = _Mat_AddWeightedPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, double, Mat, double, double, Mat, int)>();

  ffi.Pointer<CvStatus> Mat_AdjustROI(
    Mat m,
    int dtop,
    int dbottom,
    int dleft,
    int dright,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_AdjustROI(
      m,
      dtop,
      dbottom,
      dleft,
      dright,
      rval,
    );
  }

  late final _Mat_AdjustROIPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              ffi.Int, ffi.Pointer<Mat>)>>('Mat_AdjustROI');
  late final _Mat_AdjustROI = _Mat_AdjustROIPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, int, int, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> Mat_BatchDistance(
    Mat src1,
    Mat src2,
    Mat dist,
    int dtype,
    Mat nidx,
    int normType,
    int K,
    Mat mask,
    int update,
    bool crosscheck,
  ) {
    return _Mat_BatchDistance(
      src1,
      src2,
      dist,
      dtype,
      nidx,
      normType,
      K,
      mask,
      update,
      crosscheck,
    );
  }

  late final _Mat_BatchDistancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Int, Mat, ffi.Int,
              ffi.Int, Mat, ffi.Int, ffi.Bool)>>('Mat_BatchDistance');
  late final _Mat_BatchDistance = _Mat_BatchDistancePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, int, Mat, int, int, Mat, int, bool)>();

  ffi.Pointer<CvStatus> Mat_BitwiseAnd(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_BitwiseAnd(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_BitwiseAndPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_BitwiseAnd');
  late final _Mat_BitwiseAnd = _Mat_BitwiseAndPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseAndWithMask(
    Mat src1,
    Mat src2,
    Mat dst,
    Mat mask,
  ) {
    return _Mat_BitwiseAndWithMask(
      src1,
      src2,
      dst,
      mask,
    );
  }

  late final _Mat_BitwiseAndWithMaskPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>>(
      'Mat_BitwiseAndWithMask');
  late final _Mat_BitwiseAndWithMask = _Mat_BitwiseAndWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseNot(
    Mat src1,
    Mat dst,
  ) {
    return _Mat_BitwiseNot(
      src1,
      dst,
    );
  }

  late final _Mat_BitwiseNotPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>>(
          'Mat_BitwiseNot');
  late final _Mat_BitwiseNot =
      _Mat_BitwiseNotPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseNotWithMask(
    Mat src1,
    Mat dst,
    Mat mask,
  ) {
    return _Mat_BitwiseNotWithMask(
      src1,
      dst,
      mask,
    );
  }

  late final _Mat_BitwiseNotWithMaskPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_BitwiseNotWithMask');
  late final _Mat_BitwiseNotWithMask = _Mat_BitwiseNotWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseOr(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_BitwiseOr(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_BitwiseOrPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_BitwiseOr');
  late final _Mat_BitwiseOr = _Mat_BitwiseOrPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseOrWithMask(
    Mat src1,
    Mat src2,
    Mat dst,
    Mat mask,
  ) {
    return _Mat_BitwiseOrWithMask(
      src1,
      src2,
      dst,
      mask,
    );
  }

  late final _Mat_BitwiseOrWithMaskPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>>(
      'Mat_BitwiseOrWithMask');
  late final _Mat_BitwiseOrWithMask = _Mat_BitwiseOrWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseXor(
    Mat src1,
    Mat src2,
    Mat dst,
  ) {
    return _Mat_BitwiseXor(
      src1,
      src2,
      dst,
    );
  }

  late final _Mat_BitwiseXorPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'Mat_BitwiseXor');
  late final _Mat_BitwiseXor = _Mat_BitwiseXorPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BitwiseXorWithMask(
    Mat src1,
    Mat src2,
    Mat dst,
    Mat mask,
  ) {
    return _Mat_BitwiseXorWithMask(
      src1,
      src2,
      dst,
      mask,
    );
  }

  late final _Mat_BitwiseXorWithMaskPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>>(
      'Mat_BitwiseXorWithMask');
  late final _Mat_BitwiseXorWithMask = _Mat_BitwiseXorWithMaskPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> Mat_BorderInterpolate(
    int p,
    int len,
    int borderType,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _Mat_BorderInterpolate(
      p,
      len,
      borderType,
      rval,
    );
  }

  late final _Mat_BorderInterpolatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Int>)>>('Mat_BorderInterpolate');
  late final _Mat_BorderInterpolate = _Mat_BorderInterpolatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, int, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> Mat_CalcCovarMatrix(
    Mat samples,
    Mat covar,
    Mat mean,
    int flags,
    int ctype,
  ) {
    return _Mat_CalcCovarMatrix(
      samples,
      covar,
      mean,
      flags,
      ctype,
    );
  }

  late final _Mat_CalcCovarMatrixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Int, ffi.Int)>>('Mat_CalcCovarMatrix');
  late final _Mat_CalcCovarMatrix = _Mat_CalcCovarMatrixPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, int, int)>();

  ffi.Pointer<CvStatus> Mat_CartToPolar(
    Mat x,
    Mat y,
    Mat magnitude,
    Mat angle,
    bool angleInDegrees,
  ) {
    return _Mat_CartToPolar(
      x,
      y,
      magnitude,
      angle,
      angleInDegrees,
    );
  }

  late final _Mat_CartToPolarPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, Mat, ffi.Bool)>>('Mat_CartToPolar');
  late final _Mat_CartToPolar = _Mat_CartToPolarPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, bool)>();

  int Mat_Channels(
    Mat m,
  ) {
    return _Mat_Channels(
      m,
    );
  }

  late final _Mat_ChannelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(Mat)>>('Mat_Channels');
  late final _Mat_Channels =
      _Mat_ChannelsPtr.asFunction<int Function(Mat)>(isLeaf: true);

  ffi.Pointer<CvStatus> Mat_CheckRange(
    Mat m,
    bool quiet,
    ffi.Pointer<Point> pos,
    double minVal,
    double maxVal,
    ffi.Pointer<ffi.Bool> rval,
  ) {
    return _Mat_CheckRange(
      m,
      quiet,
      pos,
      minVal,
      maxVal,
      rval,
    );
  }

  late final _Mat_CheckRangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Bool,
              ffi.Pointer<Point>,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Bool>)>>('Mat_CheckRange');
  late final _Mat_CheckRange = _Mat_CheckRangePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, bool, ffi.Pointer<Point>, double,
          double, ffi.Pointer<ffi.Bool>)>();

  ffi.Pointer<CvStatus> Mat_Clone(
    Mat m,
    ffi.Pointer<Mat> rval,
  ) {
    return _Mat_Clone(
      m,
      rval,
    );
  }

  late final _Mat_ClonePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>>('Mat_Clone');
  late final _Mat_Clone = _Mat_ClonePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<Mat>)>();
